# ldk-server

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  flake.nix  index.html
.github/workflows/: build.yml  check-protos.yml  e2e-tests.yml  integration-tests-events-rabbitmq.yml  integration-tests.yml  mcp.yml
contrib/: ldk-server-config.toml  ldk-server-mcp-config.toml  ldk-server.service
docs/: api-guide.md  configuration.md  getting-started.md  operations.md  tor.md
docs/brainstorms/: 2026-05-07-ldk-server-mcp.md
e2e-tests/: Cargo.toml  build.rs
e2e-tests/src/: lib.rs
e2e-tests/tests/: config.rs  e2e.rs  mcp.rs
ldk-server/: Cargo.toml  README.md  build.rs  ldk-server-config.toml  log4rs.toml
ldk-server-chaos/: Cargo.toml
ldk-server-chaos/src/: bitcoind.rs  config.rs  main.rs
ldk-server-cli/: Cargo.toml  README.md  build.rs
ldk-server-cli/src/: config.rs  main.rs  types.rs
ldk-server-client/: Cargo.toml  README.md  uniffi-android.toml  uniffi-bindgen.rs
ldk-server-client/src/: client.rs  config.rs  error.rs  lib.rs  uniffi_types.rs
ldk-server-grpc/: Cargo.toml  README.md  build.rs
ldk-server-grpc/src/: api.rs  endpoints.rs  error.rs  events.rs  grpc.rs  lib.rs  serde_utils.rs  types.rs
ldk-server-grpc/src/proto/: api.proto  events.proto  types.proto
ldk-server-gui/: Cargo.toml  README.md
ldk-server-gui/src/: app.rs  config.rs  main.rs  state.rs
ldk-server-gui/src/ui/: balances.rs  channels.rs  connection.rs  lightning.rs  mod.rs  node_info.rs  onchain.rs  payments.rs
ldk-server-json-models/: Cargo.toml
ldk-server-json-models/src/: api.rs  endpoints.rs  error.rs  events.rs  lib.rs  serde_utils.rs  types.rs
ldk-server-json-models/tests/: serialization.rs
ldk-server-mcp/: CLAUDE.md  Cargo.toml  README.md
ldk-server-mcp/src/: config.rs  main.rs  mcp.rs  protocol.rs
ldk-server-mcp/src/daemon/: client.rs  mod.rs
ldk-server-mcp/src/tools/: handlers.rs  mod.rs  schema.rs
ldk-server-mcp/src/util/: logger.rs  mod.rs  tls.rs
ldk-server-mcp/src/web/: mod.rs  routes.rs
ldk-server-mcp/tests/: integration.rs
ldk-server-protos/: Cargo.toml  build.rs
ldk-server-protos/src/: api.rs  endpoints.rs  error.rs  events.rs  lib.rs  serde_utils.rs  types.rs
ldk-server-protos/src/proto/: api.proto  types.proto
ldk-server/src/: api_keys.rs  args.rs  grpc_service.rs  main.rs  openapi.rs  service.rs  telemetry.rs
ldk-server/src/api/: bolt11_claim_for_hash.rs  bolt11_fail_for_hash.rs  bolt11_receive.rs  bolt11_receive_for_hash.rs  bolt11_receive_via_jit_channel.rs  bolt11_send.rs  bolt12_receive.rs  bolt12_send.rs  close_channel.rs  connect_peer.rs  decode_invoice.rs  decode_offer.rs  disconnect_peer.rs  error.rs  export_pathfinding_scores.rs  get_balances.rs  get_node_info.rs  get_payment_details.rs  graph_get_channel.rs  graph_get_node.rs  graph_list_channels.rs  graph_list_nodes.rs  list_channels.rs  list_forwarded_payments.rs  list_payments.rs  list_peers.rs  metrics.rs  mod.rs  onchain_receive.rs  onchain_send.rs  open_channel.rs  sign_message.rs  splice_channel.rs  spontaneous_send.rs  unified_send.rs  update_channel_config.rs  verify_signature.rs
ldk-server/src/io/: mod.rs  utils.rs
ldk-server/src/io/events/: event_publisher.rs  mod.rs  sse.rs
ldk-server/src/io/events/rabbitmq/: mod.rs
ldk-server/src/io/persist/: mod.rs  paginated_kv_store.rs  types.rs
ldk-server/src/io/persist/sqlite_store/: mod.rs
ldk-server/src/util/: adapter.rs  config.rs  entropy.rs  logger.rs  metrics.rs  mod.rs  proto_adapter.rs  systemd.rs  tls.rs
nix/: apps.nix  crane.nix  pkgs.nix  shells.nix  treefmt.nix
nix/checks/: flake-module.nix  integration.nix
nix/modules/: flake-module.nix  ldk-server.nix
protos/: build.rs
protos/src/: api.rs  error.rs  lib.rs  types.rs
protos/src/proto/: error.proto
scripts/: download_bitcoind.sh  uniffi_bindgen_generate_kotlin_android.sh
server/src/api/: error.rs
