[workspace]
resolver = "2"
members = [ "ldk-server-cli", "ldk-server-client", "ldk-server-protos", "ldk-server"]

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[profile.dev]
panic = "abort"

[patch.crates-io]
esplora-client = { git = 'https://github.com/acidbunny21/rust-esplora-client.git', branch = 'submit-tx-pkg-clients' }
