[workspace]
resolver = "2"
members = [ "ldk-server-chaos", "ldk-server-cli", "ldk-server-client", "ldk-server-protos", "ldk-server"]

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[profile.dev]
panic = "abort"

[patch."https://github.com/lightningdevkit/ldk-node"]
ldk-node = { git = "https://github.com/joostjager/ldk-node", branch = "mon-barrier" }

[patch."https://github.com/lightningdevkit/rust-lightning"]
lightning = { git = "https://github.com/joostjager/rust-lightning", branch = "mon-barrier" }
lightning-invoice = { git = "https://github.com/joostjager/rust-lightning", branch = "mon-barrier" }
lightning-net-tokio = { git = "https://github.com/joostjager/rust-lightning", branch = "mon-barrier" }
lightning-persister = { git = "https://github.com/joostjager/rust-lightning", branch = "mon-barrier" }
lightning-background-processor = { git = "https://github.com/joostjager/rust-lightning", branch = "mon-barrier" }
lightning-rapid-gossip-sync = { git = "https://github.com/joostjager/rust-lightning", branch = "mon-barrier" }
lightning-transaction-sync = { git = "https://github.com/joostjager/rust-lightning", branch = "mon-barrier" }
lightning-liquidity = { git = "https://github.com/joostjager/rust-lightning", branch = "mon-barrier" }
lightning-types = { git = "https://github.com/joostjager/rust-lightning", branch = "mon-barrier" }
lightning-block-sync = { git = "https://github.com/joostjager/rust-lightning", branch = "mon-barrier" }
