[package]
name = "ldk-server-grpc"
version = "0.1.0"
authors = ["benthecarman <benthecarman@live.com>", "Elias Rohrer <dev@tnull.de>"]
homepage = "https://lightningdevkit.org/"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.85"
description = "Protocol Buffer definitions and Rust types for the LDK Server API."
repository = "https://github.com/lightningdevkit/ldk-server/"
documentation = "https://docs.rs/ldk-server-grpc"
readme = "README.md"
keywords = ["bitcoin", "lightning", "ldk", "server", "grpc"]
categories = ["cryptography::cryptocurrencies"]

build = "build.rs"

# We use a cfg instead of a feature for genproto to prevent it from being
# enabled with --all-features. Proto generation is a developer-only tool that
# requires external dependencies (protoc) and shouldn't be triggered accidentally.
# This lint configuration tells Cargo that genproto is an expected custom cfg.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(genproto)'] }

[features]
default = []
serde = ["dep:serde", "bytes/serde"]

[dependencies]
prost = { version = "0.11.6", default-features = false, features = ["std", "prost-derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
bytes = { version = "1", default-features = false }
http = { version = "1", default-features = false }
http-body = { version = "1", default-features = false }
tokio = { version = "1", default-features = false, features = ["sync"] }

[dev-dependencies]
tonic = { version = "0.9", default-features = false, features = ["transport", "codegen", "prost"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tokio-stream = "0.1"
hyper = { version = "1", features = ["server", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[target.'cfg(genproto)'.build-dependencies]
prost-build = { version = "0.11.6", default-features = false }
