[package]
name = "ldk-server-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "sync"] }
ldk-server-client = { path = "../ldk-server-client" }
ldk-server-protos = { path = "../ldk-server-protos" }
futures-util = "0.3"
rfd = "0.15"
arboard = "3.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
