[package]
name = "ldk-server-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
hex-conservative = { version = "0.2", default-features = false, features = ["std"] }
ldk-server-client = { path = "../ldk-server-client", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "io-util", "io-std"] }
