[package]
name = "ldk-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ldk-node = { git = "https://github.com/lightningdevkit/ldk-node", rev = "9e0a8124cbe2c00a06fc5c880113213d4b36d8aa" }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
tonic = { version = "0.12", features = ["tls"] }
tokio = { version = "1.38.0", default-features = false, features = ["time", "signal", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
ring = { version = "0.17", default-features = false }
getrandom = { version = "0.2", default-features = false }
prost = { version = "0.13", default-features = false, features = ["std"] }
ldk-server-protos = { path = "../ldk-server-protos", features = ["server"] }
bytes = { version = "1.4.0", default-features = false }
hex = { package = "hex-conservative", version = "0.2.1", default-features = false }
rusqlite = { version = "0.31.0", features = ["bundled"] }
toml = { version = "0.8.9", default-features = false, features = ["parse"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = "0.4.28"
base64 = { version = "0.21", default-features = false, features = ["std"] }
clap = { version = "4.0.5", default-features = false, features = ["derive", "std", "error-context", "suggestions", "help", "env"] }

[features]
default = []

# Experimental Features.
experimental-lsps2-support = []

[dev-dependencies]
